# be-hpg

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: ablation_lambda.yaml  base.yaml  be_hpg.yaml  be_hpg_nossp.yaml  data.yaml  meta_reweight.yaml  protonet.yaml
notebooks/: .gitkeep  01_data_prep.ipynb  02_train_eval.ipynb  03_ablations.ipynb  04_eval_postprocess.ipynb  05_revision.ipynb
paper/: main.tex  refs.bib  tab_ablation.tex  tab_ci.tex  tab_main.tex  tab_rawlcc.tex  tab_ssp.tex
paper/figures/: .gitkeep
results/: .gitkeep  be_hpg_lam0.0_spleen.json  be_hpg_lam0.1_spleen.json  be_hpg_lam0.3_spleen.json  be_hpg_lam0.5_spleen.json  be_hpg_nossp_spleen_lcc.json  be_hpg_nossp_spleen_lcc_samples.json  be_hpg_spleen.json  be_hpg_spleen_lcc.json  be_hpg_spleen_lcc_samples.json  meta_reweight_spleen.json  meta_reweight_spleen_lcc.json  meta_reweight_spleen_lcc_samples.json  protonet_spleen.json  protonet_spleen_lcc.json  protonet_spleen_lcc_samples.json
src/: __init__.py
src/data/: __init__.py  download.py  manifest.py  preprocess.py  sampler.py
src/engine/: __init__.py  build.py  checkpoint.py  eval.py  train.py
src/losses/: __init__.py  bce.py  boundary.py
src/metrics/: __init__.py  dice.py  iou.py  postprocess.py  surface.py
src/models/: __init__.py  backbones.py  be_hpg.py  common.py  meta_reweight.py  protonet.py
src/utils/: __init__.py  config.py  (+4 more)
tests/: .gitkeep  test_bootstrap.py  test_download.py  test_engine.py  test_kmeans_edgecases.py  test_losses.py  test_metrics.py  test_models.py  test_preprocess.py  test_sampler.py
